build/log/idf_py_stdout_output_78255
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded/build/bootloader/esp-idf/esptool_py && /home/pedro/.espressif/python_env/idf5.3_py3.10_env/bin/python /home/pedro/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded/build/bootloader/bootloader.bin
Bootloader binary size 0x5230 bytes. 0x2dd0 bytes (36%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/seebum_embedded.c.obj
[5/11] Building C object esp-idf/motor_driver/CMakeFiles/__idf_motor_driver.dir/motor_driver.c.obj
FAILED: esp-idf/motor_driver/CMakeFiles/__idf_motor_driver.dir/motor_driver.c.obj 
/home/pedro/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dev-1194-g5d8fb281e7\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded/build/config -I/home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded/main/components/motor_driver/include -I/home/pedro/esp/esp-idf/components/newlib/platform_include -I/home/pedro/esp/esp-idf/components/freertos/config/include -I/home/pedro/esp/esp-idf/components/freertos/config/include/freertos -I/home/pedro/esp/esp-idf/components/freertos/config/xtensa/include -I/home/pedro/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/pedro/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/pedro/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/pedro/esp/esp-idf/components/freertos/esp_additions/include -I/home/pedro/esp/esp-idf/components/esp_hw_support/include -I/home/pedro/esp/esp-idf/components/esp_hw_support/include/soc -I/home/pedro/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/pedro/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/pedro/esp/esp-idf/components/heap/include -I/home/pedro/esp/esp-idf/components/log/include -I/home/pedro/esp/esp-idf/components/soc/include -I/home/pedro/esp/esp-idf/components/soc/esp32s3 -I/home/pedro/esp/esp-idf/components/soc/esp32s3/include -I/home/pedro/esp/esp-idf/components/hal/platform_port/include -I/home/pedro/esp/esp-idf/components/hal/esp32s3/include -I/home/pedro/esp/esp-idf/components/hal/include -I/home/pedro/esp/esp-idf/components/esp_rom/include -I/home/pedro/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/pedro/esp/esp-idf/components/esp_rom/esp32s3 -I/home/pedro/esp/esp-idf/components/esp_common/include -I/home/pedro/esp/esp-idf/components/esp_system/include -I/home/pedro/esp/esp-idf/components/esp_system/port/soc -I/home/pedro/esp/esp-idf/components/esp_system/port/include/private -I/home/pedro/esp/esp-idf/components/xtensa/esp32s3/include -I/home/pedro/esp/esp-idf/components/xtensa/include -I/home/pedro/esp/esp-idf/components/xtensa/deprecated_include -I/home/pedro/esp/esp-idf/components/lwip/include -I/home/pedro/esp/esp-idf/components/lwip/include/apps -I/home/pedro/esp/esp-idf/components/lwip/include/apps/sntp -I/home/pedro/esp/esp-idf/components/lwip/lwip/src/include -I/home/pedro/esp/esp-idf/components/lwip/port/include -I/home/pedro/esp/esp-idf/components/lwip/port/freertos/include -I/home/pedro/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/pedro/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/pedro/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/pedro/esp/esp-idf/components/driver/deprecated -I/home/pedro/esp/esp-idf/components/driver/i2c/include -I/home/pedro/esp/esp-idf/components/driver/ledc/include -I/home/pedro/esp/esp-idf/components/driver/parlio/include -I/home/pedro/esp/esp-idf/components/driver/touch_sensor/include -I/home/pedro/esp/esp-idf/components/driver/twai/include -I/home/pedro/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/pedro/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/pedro/esp/esp-idf/components/esp_pm/include -I/home/pedro/esp/esp-idf/components/esp_ringbuf/include -I/home/pedro/esp/esp-idf/components/esp_driver_gpio/include -I/home/pedro/esp/esp-idf/components/esp_driver_pcnt/include -I/home/pedro/esp/esp-idf/components/esp_driver_gptimer/include -I/home/pedro/esp/esp-idf/components/esp_driver_spi/include -I/home/pedro/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/pedro/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/pedro/esp/esp-idf/components/esp_driver_i2s/include -I/home/pedro/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/pedro/esp/esp-idf/components/sdmmc/include -I/home/pedro/esp/esp-idf/components/esp_driver_sdspi/include -I/home/pedro/esp/esp-idf/components/esp_driver_sdio/include -I/home/pedro/esp/esp-idf/components/esp_driver_dac/include -I/home/pedro/esp/esp-idf/components/esp_driver_rmt/include -I/home/pedro/esp/esp-idf/components/esp_driver_tsens/include -I/home/pedro/esp/esp-idf/components/esp_driver_sdm/include -I/home/pedro/esp/esp-idf/components/esp_driver_i2c/include -I/home/pedro/esp/esp-idf/components/esp_driver_uart/include -I/home/pedro/esp/esp-idf/components/vfs/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded=. -fmacro-prefix-map=/home/pedro/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/motor_driver/CMakeFiles/__idf_motor_driver.dir/motor_driver.c.obj -MF esp-idf/motor_driver/CMakeFiles/__idf_motor_driver.dir/motor_driver.c.obj.d -o esp-idf/motor_driver/CMakeFiles/__idf_motor_driver.dir/motor_driver.c.obj -c /home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded/main/components/motor_driver/motor_driver.c
/home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded/main/components/motor_driver/motor_driver.c: In function 'motor_driver_init':
/home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded/main/components/motor_driver/motor_driver.c:21:21: error: 'PWM_Mode' undeclared (first use in this function); did you mean 'PWM_MODE'?
   21 |       .speed_mode = PWM_Mode,
      |                     ^~~~~~~~
      |                     PWM_MODE
/home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded/main/components/motor_driver/motor_driver.c:21:21: note: each undeclared identifier is reported only once for each function it appears in
/home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded/main/components/motor_driver/motor_driver.c:22:20: error: 'PWM' undeclared (first use in this function); did you mean 'PWMA1'?
   22 |       .timer_num = PWM,
      |                    ^~~
      |                    PWMA1
/home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded/main/components/motor_driver/motor_driver.c:23:26: error: 'LEDC_DUTY_RES' undeclared (first use in this function); did you mean 'PWM_DUTY_RES'?
   23 |       .duty_resolution = LEDC_DUTY_RES,
      |                          ^~~~~~~~~~~~~
      |                          PWM_DUTY_RES
/home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded/main/components/motor_driver/motor_driver.c:24:18: error: 'LEDC_FREQUENCY' undeclared (first use in this function); did you mean 'PWM_FREQUENCY'?
   24 |       .freq_hz = LEDC_FREQUENCY, // Set output frequency at 4 kHz
      |                  ^~~~~~~~~~~~~~
      |                  PWM_FREQUENCY
/home/pedro/Pessoal/code/UTFPR/TCC/seebum_embedded/main/components/motor_driver/motor_driver.c:20:23: warning: unused variable 'ledc_timer' [-Wunused-variable]
   20 |   ledc_timer_config_t ledc_timer = {
      |                       ^~~~~~~~~~
ninja: build stopped: subcommand failed.
